--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,8 @@ ENDPOINT_S3=
 BUCKET=
 
 
-MAIL_HOST= "sandbox.smtp.mailtrap.io"
-MAIL_PORT= 2525
-MAIL_USER= "bbe6e28fbe5730"
-MAIL_PASS= "a7440b37f5e87d"
+MAIL_HOST= 
+MAIL_PORT= 
+MAIL_USER= 
+MAIL_PASS= 
 MAIL_FROM=
